# ocaml-screen-orientation

./: README.md  dune-project  screen-orientation.opam
.github/workflows/: main.yml
src/: base.mli  dune  screen_orientation.ml  screen_orientation.mli  screen_orientation_lwt.ml  screen_orientation_lwt.mli
