opam-version: "2.0"
version: "2.0"
maintainer:   "Thibaut Gudin <tgudin@besport.com>"
authors:      "Thibaut Gudin <tgudin@besport.com>"
homepage:     "git+https://github.com/besport/ocaml-screen-orientation"
bug-reports:  "git+https://github.com/besport/ocaml-screen-orientation/issues"
dev-repo:     "git+https://github.com/besport/ocaml-screen-orientation"
license:      "LGPL-2.1 with OCaml linking exception"
description: "Binding to the orientation plugin of 'screen' using gen_js_api"
synopsis: "Binding to the orientation plugin of 'screen' using gen_js_api"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0" }
  "dune" {>= "2.8"}
  "gen_js_api"
  "js_of_ocaml" {>= "3.8.0"}
  "js_of_ocaml-ppx" {>= "3.8.0"}
  "lwt_ppx" {>= "2.0.1"}
  "promise_jsoo"
  "promise_jsoo-ppx"
  "promise_jsoo_lwt"
]
pin-depends: [
  [ "promise_jsoo_lwt" "git+https://github.com/mnxn/promise_jsoo"]
]
